# automation-tool

./: .gitignore  Dockerfile  README.md  behave.ini  main.py  pyproject.toml  requirements.txt
configs/: config.yaml
features/: environment.py
features/api/: auth.feature  protected.feature
features/steps/: api_steps.py  ui_steps.py
features/ui/: search.feature
k8s/: cronjob.yaml
src/api/: client.py  schema_validator.py  schemas.py  token.py
src/ui/pages/: base_page.py  search_page.py  search_result_page.py
src/utils/: config.py
